[gd_scene load_steps=11 format=3 uid="uid://h103fpdwykme"]

[ext_resource type="Script" uid="uid://bbdy381qrdyj7" path="res://src/ui/components/mobile_ui/mobile_ui.gd" id="1_0vbkt"]
[ext_resource type="PackedScene" uid="uid://nn0iih4xpn2e" path="res://src/ui/components/button_touch_action/button_touch_action.tscn" id="1_q4n4k"]
[ext_resource type="Texture2D" uid="uid://delidesdvfjyx" path="res://assets/themes/dark_dcl_theme/icons/Mic.svg" id="2_0vbkt"]
[ext_resource type="Texture2D" uid="uid://bsi31cwrsdll1" path="res://assets/themes/dark_dcl_theme/icons/Emotes.svg" id="3_127wn"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="4_76ibe"]
[ext_resource type="Texture2D" uid="uid://v1avum5r3l4s" path="res://assets/themes/dark_dcl_theme/icons/JumpButton.svg" id="5_u8vns"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://src/mobile/joystick/virtual_joystick.tscn" id="6_otako"]
[ext_resource type="Texture2D" uid="uid://b4737nt6bvhom" path="res://assets/joystick-off.svg" id="8_u8vns"]
[ext_resource type="Texture2D" uid="uid://deksw5gs7cskk" path="res://assets/joystick-on.svg" id="9_otako"]
[ext_resource type="BitMap" uid="uid://dbnytkl2gdoq4" path="res://assets/joystick-mask.svg" id="10_u8vns"]

[node name="MobileUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0vbkt")

[node name="Button_PrimaryAction" parent="." instance=ExtResource("1_q4n4k")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -277.0
offset_right = -136.0
offset_bottom = -197.0
grow_horizontal = 0
grow_vertical = 0

[node name="Button_Mic" parent="." instance=ExtResource("1_q4n4k")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -129.0
offset_top = -325.0
offset_right = -49.0
offset_bottom = -245.0
grow_horizontal = 0
grow_vertical = 0
text_letter = "T"
icon = ExtResource("2_0vbkt")
trigger_action = "ia_record_mic"

[node name="Button_SecondaryAction" parent="." instance=ExtResource("1_q4n4k")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -274.0
offset_top = -201.0
offset_right = -194.0
offset_bottom = -121.0
grow_horizontal = 0
grow_vertical = 0
text_letter = "F"
trigger_action = "ia_secondary"

[node name="Button_EmoteAction" parent="." instance=ExtResource("1_q4n4k")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -307.0
offset_top = -111.0
offset_right = -227.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
text_letter = "F"
icon = ExtResource("3_127wn")
trigger_action = "ia_open_emote_wheel"

[node name="Button_Jump" type="TextureButton" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -174.0
offset_right = -44.0
offset_bottom = -54.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme = ExtResource("4_76ibe")
texture_normal = ExtResource("5_u8vns")
ignore_texture_size = true
stretch_mode = 4

[node name="ShadowOutter" type="TextureRect" parent="Button_Jump"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_u8vns")
expand_mode = 2

[node name="ShadowInner" type="TextureRect" parent="Button_Jump"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_u8vns")
expand_mode = 2

[node name="VirtualJoystick_Left" parent="." instance=ExtResource("6_otako")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.352
offset_top = -327.0
offset_right = -0.560028
deadzone_size = 0.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_bottom = 48.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 95

[node name="TextureButton" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("8_u8vns")
texture_pressed = ExtResource("9_otako")
texture_hover = ExtResource("9_otako")
texture_disabled = ExtResource("9_otako")
texture_focused = ExtResource("9_otako")
texture_click_mask = ExtResource("10_u8vns")
ignore_texture_size = true
stretch_mode = 4

[connection signal="toggled" from="MarginContainer/TextureButton" to="." method="_on_texture_button_toggled"]
